--- a/templates/base.html
+++ b/templates/base.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
-	<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css">
-	<!--<link rel="stylesheet/less" type="text/css" href="/theme/css/style.less">-->
-	<!--<script src="/theme/js/less.js" type="text/javascript"></script>-->
-	<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/pygments.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300|Inconsolata' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/pygments.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300|Inconsolata' rel='stylesheet' type='text/css'>
+    {% if FEED_ATOM %}
+        <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} ATOM Feed" />
+    {% endif %}
+    {% if FEED_RSS %}
+        <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
+    {% endif %}
 
-	<link href="{{ FEED_DOMAIN }}/{{ FEED }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} ATOM Feed" />
-	{% if FEED_RSS %}
-		<link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
-	{% endif %}
-
-	{% block head %}
-		<title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-		<meta charset="utf-8" />
-	{% endblock head %}
+    {% block head %}
+        <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+        <meta charset="utf-8" />
+    {% endblock head %}
 </head>
 <body>
-	<section id="sidebar">
-		<figure id="user_logo">
-            <a href="{{ SITEURL }}"><div class="logo">&nbsp;</div></a>
-		</figure>
+    <section id="sidebar">
+        <figure id="user_logo">
+            <a href="{{ SITEURL }}"><div class="logo"><img src="{{ LOGO_URL }}" alt="{{ AUTHOR }}: {{ TAGLINE }}"></div></a>
+        </figure>
 
-		<div class="user_meta">
+        <div class="user_meta">
             <h1 id="user"><a href="{{ SITEURL }}" class="">{{ AUTHOR }}</a></h1>
-			<h2>{{ TAGLINE }}</h2>
-			<ul>
-				{% for title, link in MENUITEMS %}
-					<li><a href="{{ link }}">{{ title }}</a></li>
-				{% endfor %}
-				{% if DISPLAY_PAGES_ON_MENU %}
-					{% for p in PAGES %}
-						<li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
-					{% endfor %}
-				{% else %}
-					{% for cat, null in categories %}
-						<li{% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
-					{% endfor %}
-				{% endif %}
-				{% for name, link in LINKS %}
-					<li><a href="{{ link }}">{{ name }}</a></li>
-				{% endfor %}
-			</ul>
-		</div>
-		<footer>
-			<address>
-				Powered by <a href="http://pelican.notmyidea.org/">Pelican</a>,
-		                theme by <a href="https://github.com/wting/pelican-svbtle">wting</a>.
-			</address>
-		</footer>
-	</section>
+            <h2>{{ TAGLINE }}</h2>
+            <ul>
+                {% if DISPLAY_PAGES_ON_MENU %}
+                    {% for p in PAGES %}
+                        <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
+                    {% endfor %}
+                {% else %}
+                    {% for cat, null in categories %}
+                        <li{% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
+                    {% endfor %}
+                {% endif %}
+                {% for title, link in MENUITEMS %}
+                    <li><a href="{{ link }}">{{ title }}</a></li>
+                {% endfor %}
+                {% for name, link in LINKS %}
+                    <li><a href="{{ link }}">{{ name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+        <footer>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US" title="these writings are licensed under the Creative Commons Attribution-ShareAlike 3.0 Unported license"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a>
+        </footer>
+    </section>
 
-	<section id="posts">
-	{% block content %}
-	{% endblock %}
-	</section>
+    <section id="posts">
+        {% block content %}
+        {% endblock %}
+    </section>
 
-	{% include 'analytics.html' %}
+    {% include 'analytics.html' %}
 </body>
 </html>
