--- a/templates/header.html
+++ b/templates/header.html
@@ -7,14 +7,11 @@
 	<header>
 		<h1>{{ AUTHOR }}'s blog</h1>
 		<h3>
-			<script type="text/javascript">
-				var currentDate = new Date();
-				var day = currentDate.getDate();
-				var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "June", "July", "Aug", "Sep", "Oct", "Nov", "Dec" ];
-				var month = monthNames[currentDate.getMonth()].toUpperCase();
-				var year = currentDate.getFullYear();
-				document.write(month + " " + day + ", " + year);
-			</script>
+                            {% if HEADER_MESSAGE %}
+                                {{ HEADER_MESSAGE }}
+                            {% else %}
+                                Have a great day.
+		    {% endif %}
 		</h3>
 	</header>
 {% endif %}
