--- a/templates/page.html
+++ b/templates/page.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
-{% block title %}{{ page.title }}{%endblock%}
+{% block title %}{{ page.title }} | {{ SITENAME }}{%endblock%}
 {% block content %}
 	{% include "header.html" %}
 	<article>
-		<h1 id="title">
+		<h2 id="title">
 			<a href="{{ SITEURL }}/{{ page.url }}" rel="bookmark">{{ page.title }}</a>
-		</h1>
+		</h2>
 		{{ page.content }}
 
 	</article>
 
 	<footer>
-		<a href="{{ SITEURL }}/" class="button_accent">&larr;&nbsp;&nbsp;&nbsp;Back to blog</a>
+		<a href="{{ SITEURL }}/" class="button_accent">&larr;&nbsp;&nbsp;&nbsp;Read more</a>
 	</footer>
 {% endblock %}
