--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -8,7 +8,7 @@
 		{% endif %}
 	{% endif %}
 	{% if articles_page.has_next() %}
-		<a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html" class="button_accent" style="position: absolute; right: 0;">continue&nbsp;&nbsp;&nbsp;&rarr;</a>
+		<a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html" class="button_accent" style="position: absolute; right: 0;">older&nbsp;&nbsp;&nbsp;&rarr;</a>
 	{% endif %}
 </p>
 {% endif %}
