--- a/static/css/style.less
+++ b/static/css/style.less
@@ -179,7 +179,7 @@ section#posts {
     min-width: 710px;
     height: 100%;
     border-left: @light-grey 1px solid;
-    background-color: rgba(255,255,255,.9);
+    background-color: rgba(255,255,255,1.0);
     position: relative;
     z-index: 1;
 
