--- a/templates/article.html
+++ b/templates/article.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% include "header.html" %}
     <article>
-        <h2 id="title">
+        <h2 class="title">
             <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
                 title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
         </h2>
