--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,7 @@
 {% block content %}
 	{% include "header.html" %}
 	<article>
-		<h2 id="title">
+		<h2 class="title">
 			<a href="{{ SITEURL }}/{{ page.url }}" rel="bookmark">{{ page.title }}</a>
 		</h2>
 		{{ page.content }}
