--- a/static/css/style.less
+++ b/static/css/style.less
@@ -53,6 +53,10 @@ a[rel="license"] {
         border-bottom: none;
 }
 
+dt {
+    margin-top: 1em;
+}
+
 .background-clip() {
     background-clip: padding-box;
     -moz-background-clip: padding;
